--- a/app/src/main/res/layout/fragment_favorite_movies.xml
+++ b/app/src/main/res/layout/fragment_favorite_movies.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.CategoryMoviesFragment">
+    tools:context=".ui.FavoriteMoviesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
