--- a/app/src/main/res/layout/fragment_favorite_movies.xml
+++ b/app/src/main/res/layout/fragment_favorite_movies.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.FavoriteMoviesFragment">
+    tools:context=".ui.fragments.FavoriteMoviesFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
@@ -41,7 +41,7 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/tool_bar"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/gray2"
+        android:background="@color/grey2"
         android:orientation="vertical"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:listitem="@layout/category_movie_item" />
