--- a/app/src/main/res/layout/fragment_movie_detail.xml
+++ b/app/src/main/res/layout/fragment_movie_detail.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".ui.MovieDetailFragment">
+    tools:context=".ui.fragments.MovieDetailFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
@@ -143,7 +143,7 @@
             </com.google.android.material.card.MaterialCardView>
 
             <TextView
-                android:textColor="@color/gray4"
+                android:textColor="@color/grey4"
                 android:id="@+id/description"
                 android:layout_marginHorizontal="12dp"
                 android:layout_width="wrap_content"
