--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
-    tools:context=".ui.ProfileFragment">
+    tools:context=".ui.fragments.ProfileFragment">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tool_bar"
