--- a/app/src/main/res/layout/fragment_signin.xml
+++ b/app/src/main/res/layout/fragment_signin.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.fragments.MainActivity">
 
     <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:text="@string/signInText"
-                android:textColor="@color/gray1"
+                android:textColor="@color/grey1"
                 app:layout_constraintTop_toBottomOf="@id/signIn_i"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -71,13 +71,13 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="25dp"
                     android:layout_marginHorizontal="16dp"
-                    app:boxBackgroundColor="@color/gray2"
+                    app:boxBackgroundColor="@color/grey2"
                     app:boxCornerRadiusBottomEnd="24dp"
                     app:boxCornerRadiusBottomStart="24dp"
                     app:boxCornerRadiusTopEnd="24dp"
                     app:boxCornerRadiusTopStart="24dp"
                     app:boxStrokeWidth="0dp"
-                    app:hintTextColor="@color/gray3">
+                    app:hintTextColor="@color/grey3">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/email_tf"
@@ -93,7 +93,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginHorizontal="16dp"
-                    app:boxBackgroundColor="@color/gray2"
+                    app:boxBackgroundColor="@color/grey2"
                     app:boxCornerRadiusBottomEnd="24dp"
                     app:boxCornerRadiusBottomStart="24dp"
                     app:passwordToggleEnabled="true"
@@ -101,7 +101,7 @@
                     app:boxCornerRadiusTopEnd="24dp"
                     app:boxCornerRadiusTopStart="24dp"
                     app:boxStrokeWidth="0dp"
-                    app:hintTextColor="@color/gray3"
+                    app:hintTextColor="@color/grey3"
 
                     >
 
@@ -148,7 +148,7 @@
                 android:layout_marginTop="28dp"
                 android:text="@string/forget_password"
                 android:textSize="14sp"
-                android:textColor="@color/gray4" />
+                android:textColor="@color/grey4" />
 
             <LinearLayout
                 android:layout_marginTop="28dp"
@@ -169,7 +169,7 @@
 
 
                     android:text="@string/do_not_have_acco"
-                    android:textColor="@color/gray4"
+                    android:textColor="@color/grey4"
                     android:textSize="14sp" />
 
                 <TextView
