--- a/app/src/main/res/layout/fragment_signup.xml
+++ b/app/src/main/res/layout/fragment_signup.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.MainActivity">
+    tools:context=".ui.fragments.MainActivity">
 
 
     <androidx.core.widget.NestedScrollView
@@ -34,7 +34,7 @@
                 android:layout_height="wrap_content"
                 android:textSize="24sp"
                 android:text="@string/sign_up"
-                android:textColor="@color/gray1"
+                android:textColor="@color/grey1"
                 android:textStyle="bold" />
 
             <com.google.android.material.textfield.TextInputLayout
@@ -43,13 +43,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -67,13 +67,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -92,14 +92,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
 
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -117,14 +117,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
 
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -142,13 +142,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -166,14 +166,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:layout_marginHorizontal="16dp"
-                app:boxBackgroundColor="@color/gray2"
+                app:boxBackgroundColor="@color/grey2"
                 app:boxCornerRadiusBottomEnd="24dp"
                 app:boxCornerRadiusBottomStart="24dp"
                 app:boxCornerRadiusTopEnd="24dp"
                 app:boxCornerRadiusTopStart="24dp"
                 app:boxStrokeWidth="0dp"
 
-                app:hintTextColor="@color/gray3">
+                app:hintTextColor="@color/grey3">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:layout_width="match_parent"
@@ -210,7 +210,7 @@
                 android:layout_height="wrap_content"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:clickable="true"
-                android:textColor="@color/gray4"
+                android:textColor="@color/grey4"
                 android:textSize="14sp"
                 android:text="@string/have_acco"
 
