--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -57,7 +57,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             tools:text="@string/most_popular"
-            android:textColor="@color/gray1"
+            android:textColor="@color/grey1"
             android:layout_marginTop="4dp"
 
             android:layout_gravity="center_horizontal"
